WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239425
Web Inspector: [Flexbox] `<button>` and `<select>` elements are appearing in list of Flex containers
https://bugs.webkit.org/show_bug.cgi?id=239425
Summary
Web Inspector: [Flexbox] `<button>` and `<select>` elements are appearing in ...
Patrick Angle
Reported
2022-04-16 16:47:28 PDT
Created
attachment 457759
[details]
Screenshot of Issue I suspect internally these elements are using a flex renderer. Not sure if we should actually be showing these as flex containers, though. Seems like a lot of extra noise in most cases and it's not immediately apparent how this internal implementation details is relevant to most folks.
Attachments
Screenshot of Issue
(275.95 KB, image/png)
2022-04-16 16:47 PDT
,
Patrick Angle
no flags
Details
Patch v1.0
(5.92 KB, patch)
2022-04-23 10:35 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Patch v1.1
(5.78 KB, patch)
2022-04-27 15:15 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-04-16 20:03:55 PDT
<
rdar://problem/91856323
>
Patrick Angle
Comment 2
2022-04-23 10:35:38 PDT
Created
attachment 458216
[details]
Patch v1.0
Devin Rousso
Comment 3
2022-04-25 11:14:17 PDT
Comment on
attachment 458216
[details]
Patch v1.0 View in context:
https://bugs.webkit.org/attachment.cgi?id=458216&action=review
r=me, neat!
> Source/WebCore/inspector/agents/InspectorCSSAgent.cpp:948 > + }
NIT: should we have a `return std::nullopt` so that we don't futilely attempt to `is<RenderGrid>(renderer)`?
> LayoutTests/inspector/css/nodeLayoutContextTypeChanged.html:187 > +
NIT: i'd remove this so that it doesn't affect the expected output 😅
Patrick Angle
Comment 4
2022-04-27 15:12:53 PDT
Comment on
attachment 458216
[details]
Patch v1.0 View in context:
https://bugs.webkit.org/attachment.cgi?id=458216&action=review
>> LayoutTests/inspector/css/nodeLayoutContextTypeChanged.html:187 >> + > > NIT: i'd remove this so that it doesn't affect the expected output 😅
This isn't the new line appearing in the test output. We have the `<input type="submit" id="flexSubmitInput" />` to thank for that, unfortunately.
Patrick Angle
Comment 5
2022-04-27 15:15:26 PDT
Created
attachment 458473
[details]
Patch v1.1
EWS
Comment 6
2022-04-27 22:33:16 PDT
Committed
r293565
(
250079@main
): <
https://commits.webkit.org/250079@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458473
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug