Web Inspector: [Flexbox] `<button>` and `<select>` elements are appearing in list of Flex containers https://bugs.webkit.org/show_bug.cgi?id=239425

Reviewed by Devin Rousso.

Source/WebCore:

Added test cases to inspector/css/nodeLayoutContextTypeChanged.html.

* inspector/agents/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::layoutContextTypeForRenderer):

LayoutTests:

* inspector/css/nodeLayoutContextTypeChanged-expected.txt:
* inspector/css/nodeLayoutContextTypeChanged.html:

Canonical link: https://commits.webkit.org/250079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293565 268f45cc-cd09-0410-ab3c-d52691b4dbfc